# learn_open_gl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
include/: camera.h  index_buffer.h  input_manager.h  mesh.h  model.h  shader.h  texture.h  utility.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
src/: camera.cpp  index_buffer.cpp  input_manager.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  utility.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/1.2.hello_window_clear/: hello_window_clear.cpp
src/1.getting_started/2.1.hello_triangle/: 2.1.shader.fs  2.1.shader.vs  hello_triangle.cpp  hello_window_clear.cpp
src/1.getting_started/3.3.shaders_class/: 3.3.shader  3.3.shader.fs  3.3.shader.vs  shaders_class.cpp
src/1.getting_started/4.1.textures/: 4.1.shader.fs  4.1.shader.vs  textures.cpp
src/1.getting_started/5.1.transformations/: 5.1.line_shader.fs  5.1.line_shader.vs  5.1.shader.fs  5.1.shader.vs  transformations.cpp
src/2.lighting/1.colors/: colors.cpp  lighting.frag  lighting.shader  lighting.vert  object.shader
src/2.lighting/2.2.basic_lighting_specular/: 2.2.object.frag  2.2.object.shader  2.2.object.vert  basic_lighting_specular.cpp
src/2.lighting/3.1.materials/: 3.1.lighting.frag  3.1.object.frag  3.1.object.vert  materials.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: 4.1.object.frag  lighting_maps_diffuse_map.cpp
src/2.lighting/5.1.light_casters_directional/: 5.1.object.frag  5.1.object.vert  light_casters_directional.cpp
src/2.lighting/5.2.light_casters_point/: 5.2.object.frag  light_casters_point.cpp
src/2.lighting/5.3.light_casters_spot/: 5.3.object.frag  5.3.object.vert  light_casters_spot.cpp
src/2.lighting/5.4.light_casters_spot_soft/: 5.1.lighting.vert  5.4.object.frag  5.4.object.vert  light_casters_spot_soft.cpp
src/2.lighting/6.multiple_lights/: multiple_lights.cpp  object.frag  object.vert
src/3.model_loading/1.model_loading/: model_loading.cpp  shader.frag  shader.vert
thirdparties/: CMakeLists.txt
thirdparties/glad/include/glad/: glad.h
thirdparties/glad/src/: glad.c
thirdparties/minaudio/: CMakeLists.txt  minaudio.cpp
thirdparties/stb_image/: CMakeLists.txt  stb_image.cpp
